feat: 新增了提交记录详情页，用户信息修改页
