# src/services/ant-design-pro/recordSubmitController.ts
@@ -17,6 +17,20 @@ export async function recordSubmit(
   });
 }
 
+/** 此处后端没有提供注释 GET /api/record/${param0} */
+export async function getRecordSubmit(
+  // 叠加生成的Param类型 (非body参数swagger默认没有生成对象)
+  params: API.getRecordSubmitParams,
+  options?: { [key: string]: any },
+) {
+  const { id: param0, ...queryParams } = params;
+  return request<API.ResultRecordSubmitVO>(`/api/record/${param0}`, {
+    method: 'GET',
+    params: { ...queryParams },
+    ...(options || {}),
+  });
+}
+
 /** 此处后端没有提供注释 POST /api/record/page */
 export async function getRecordSubmitPage(
   body: API.RecordSubmitQueryRequest,
